--- a/Java/ch05-Random/app/src/main/AndroidManifest.xml
+++ b/Java/ch05-Random/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ramdom">
         <activity
+            android:name=".ResultActivity"
+            android:exported="true" />
+        <activity
+            android:name=".NameActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ConstellationActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
